v.1.9.5: 🆙 Control del error QUOTA_BYTES_PER_ITEM 🆙 Canvis en la funció de notificacions 🆙 Implementació de carregues asincrones en la part client 🆙 Implementació la funcio de Drag and Drop en History.html 🆙 Implementació de la opció de privacitat de respectar l'ingonito. 🆙 Afegit Popper.js 🆙 Dependencies de Bootstrap arreglades 🆕 Nova llibreria: dragula 🆙 Material icons en local. 🆙 Canviar titol de History.html segons la configuració 🆙 Historial arranca en totes les configuracions. 🆙 Actualizacio de Copyright

--- a/App/History/history.html
+++ b/App/History/history.html
@@ -1,4 +1,4 @@
-<!--Copyright (C) 2016-2019, Roger Pedrós Villorbina, All rights reserved.-->
+<!--Copyright (C) 2016-2020, Roger Pedrós Villorbina, All rights reserved.-->
 
 <!DOCTYPE html>
 <html>
@@ -11,29 +11,29 @@
     <!--MDL-->
     <link rel="stylesheet" href="../../Resources/Style/Material/material.min.css">
     <script src="../../Resources/Style/Material/material.min.js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-red.min.css"/>
+    <link rel="stylesheet" href="../../Resources/Style/Fonts/Material_Icons.css">
+    <link rel="stylesheet" href="../../Resources/Style/Material/material.blue_grey-red.min.css">
 
     <!--JQUERY-->
     <script src="../../Resources/js/jquery-3.4.1.min.js"></script>
     <script src="../../Resources/js/tether.min.js"></script>
 
+    <!--Lodash-->
+    <script src="../../Resources/js/lodash.min.js"></script>
+
     <!--BOOTSTRAP-->
     <link href="../../Resources/Style/Bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../../Resources/Style/Bootstrap/simplex.bootstrap.min.css">
+    <script src="../../Resources/js/popper.min.js"></script>
+    <script src="../../Resources/Style/Bootstrap/js/bootstrap.min.js"></script>
 
     <!--Custom Style-->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../../Resources/css/shared-styles.css">
 
-    <!--Google Analytics-->
-    <script src="../../Resources/js/analytics.js"></script>
-
-    <!--Shortcuts-->
-    <script src="../../Resources/js/global-shortcuts.js"></script>
-
-    <!--Lodash-->
-    <script src="../../Resources/js/lodash.min.js"></script>
+    <!--Dragula - drag and drop-->
+    <script src="../../Resources/js/dragula.min.js"></script>
+    <link rel="stylesheet" href="../../Resources/css/dragula.min.css">
 
     <!--Custom Scripts-->
     <script src="../../Background/Provider/Provider.js"></script>
@@ -42,10 +42,19 @@
 
     <script src="../../Resources/js/global-translation.js"></script>
     <script src="translation.js"></script>
+    <script src="session-manager-workflow.js"></script>
+
+    <!--Shortcuts-->
+    <script src="../../Resources/js/global-shortcuts.js"></script>
+
+    <!--Google Analytics-->
+    <script src="../../Resources/js/analytics.js" async></script>
 
 
 </head>
-
+<script>
+    window['ga-disable-UA-99683106-1'] = true;
+</script>
 <body>
 
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -69,20 +78,21 @@
     <section class="col-sm-9 col-md-10 col-lg-10" id="right-content">
         <!--Session actual!-->
         <div class="jumbotron text-left">
-            <div class="card card-body custom-card">
-                <b class="card-title">Sessión Actual:</b>
 
-                <div id="sessionNotFound"></div>
-                <div class="list-group list-group-horizontal" style="margin-top: 10px;" id="lastSessionSaved"><!--Contigut generat dinamicament--></div>
+            <!-- ULTIMA SESIO GUARDADA-->
+            <div class="card card-body custom-card">
+                <b class="card-title">Última sessión guardada:</b>
+
+                <div class="box" id="sessionNotFound"></div>
+                <div class="box list-group list-group-horizontal" style="margin-top: 10px;" id="lastSessionSaved"><!--Contigut generat dinamicament--></div>
             </div>
 
+            <!--HISTORIALS-->
             <div style="margin-top: 25px; margin-bottom: 0px">
                 <h2 id="configTitol">Historial:</h2>
                 <h4><small id="configSubtitol" class="text-info">Explorar o recupera una session guardada anteriormente.</small>
                 </h4>
             </div>
-
-
             <div id="historyPanel"><!--Contigut generat dinamicament--></div>
 
         </div>
