--- a/App/Shortcuts/shortcuts.html
+++ b/App/Shortcuts/shortcuts.html
@@ -1,4 +1,4 @@
-<!--Copyright (C) 2016-2019, Roger Pedrós Villorbina, All rights reserved.-->
+<!--Copyright (C) 2016-2020, Roger Pedrós Villorbina, All rights reserved.-->
 
 <!DOCTYPE html>
 <html>
@@ -11,8 +11,8 @@
     <!--MDL-->
     <link rel="stylesheet" href="../../Resources/Style/Material/material.min.css">
     <script src="../../Resources/Style/Material/material.min.js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-red.min.css"/>
+    <link rel="stylesheet" href="../../Resources/Style/Fonts/Material_Icons.css">
+    <link rel="stylesheet" href="../../Resources/Style/Material/material.blue_grey-red.min.css">
 
     <!--JQUERY-->
     <script src="../../Resources/js/jquery-3.4.1.min.js"></script>
@@ -21,13 +21,12 @@
     <!--BOOTSTRAP-->
     <link href="../../Resources/Style/Bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../../Resources/Style/Bootstrap/simplex.bootstrap.min.css">
+    <script src="../../Resources/js/popper.min.js"></script>
+    <script src="../../Resources/Style/Bootstrap/js/bootstrap.min.js"></script>
 
     <!--Custom Style-->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../../Resources/css/shared-styles.css">
-
-    <!--Google Analytics-->
-    <script src="../../Resources/js/analytics.js"></script>
 
     <!--Global Shortcuts-->
     <script src="../../Resources/js/global-shortcuts.js"></script>
@@ -38,6 +37,9 @@
 
     <!--Lodash-->
     <script src="../../Resources/js/lodash.min.js"></script>
+
+    <!--Google Analytics-->
+    <script src="../../Resources/js/analytics.js" async></script>
 
 
 </head>
