--- a/App/Settings/settings.html
+++ b/App/Settings/settings.html
@@ -1,4 +1,4 @@
-<!--Copyright (C) 2016-2019, Roger Pedrós Villorbina, All rights reserved.-->
+<!--Copyright (C) 2016-2020, Roger Pedrós Villorbina, All rights reserved.-->
 
 <!DOCTYPE html>
 <html>
@@ -11,38 +11,44 @@
     <!--MDL-->
     <link rel="stylesheet" href="../../Resources/Style/Material/material.min.css">
     <script src="../../Resources/Style/Material/material.min.js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-red.min.css"/>
+    <link rel="stylesheet" href="../../Resources/Style/Fonts/Material_Icons.css">
+    <link rel="stylesheet" href="../../Resources/Style/Material/material.blue_grey-red.min.css">
 
     <!--JQUERY-->
     <script src="../../Resources/js/jquery-3.4.1.min.js"></script>
     <script src="../../Resources/js/tether.min.js"></script>
 
+    <!--Lodash-->
+    <script src="../../Resources/js/lodash.min.js"></script>
+
     <!--BOOTSTRAP-->
     <link href="../../Resources/Style/Bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../../Resources/Style/Bootstrap/simplex.bootstrap.min.css">
+    <script src="../../Resources/js/popper.min.js"></script>
+    <script src="../../Resources/Style/Bootstrap/js/bootstrap.min.js"></script>
+
 
     <!--Custom Style-->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../../Resources/css/shared-styles.css">
-
-    <!--Google Analytics-->
-    <script src="../../Resources/js/analytics.js"></script>
-
-    <!--Shortcuts-->
-    <script src="../../Resources/js/global-shortcuts.js"></script>
 
     <!--Custom Scripts-->
     <script src="settings-workflow.js"></script>
     <script src="../../Background/Provider/Provider.js"></script>
     <script src="../../Resources/js/global-translation.js"></script>
     <script src="translation.js"></script>
+    <script async src="allow-incognito-mode-dialog.js"></script>
 
-    <!--Lodash-->
-    <script src="../../Resources/js/lodash.min.js"></script>
+    <!--Shortcuts-->
+    <script async src="../../Resources/js/global-shortcuts.js"></script>
 
+    <!--Google Analytics-->
+    <script async src="../../Resources/js/analytics.js"></script>
+    <script src="../../Resources/Style/Bootstrap/js/bootstrap.min.js"></script>
 </head>
-
+<script>
+    window['ga-disable-UA-99683106-1'] = true;
+</script>
 <body>
 
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -122,11 +128,7 @@
                 </li>
 
             </ul>
-            <!--            <h4>-->
-            <!--            <small class="text-danger"> Recuerda que siempre puedes cambiar el modo de forma rapida haciendo click-->
-            <!--            con el boton derecho.-->
-            <!--            </small>-->
-            <!--            </h4>-->
+
         </div>
 
         <!--PRIVACY-->
@@ -140,40 +142,23 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-sm-12">
+                                <button id="show-dialog" type="button" class="btn" data-toggle="modal" data-target="#allowIncognitoModeModal"><i style="color:#FFDD00; " class="material-icons medium">warning</i></button>
+
+                                <label class="" for="optionRespectIncognito">
+                                    <input type="checkbox" id="optionRespectIncognito" class="" name="options"
+                                           value="1">
+                                    <span class="" style="font-size: 15px"><b
+                                            id="ingonitoMatters">Respetar el incognito</b>
+                                        <small> - <l id="ingonitoMattersText">Las sessiones que guardes en ingonito no se guardaran en el historial.</l></small>
+                                    </span>
+                                </label>
+
                                 <label class="invisible" for="checkboxLocalStorage">
                                     <input type="checkbox" id="checkboxLocalStorage" class="" name="options" value="1">
                                     <span class="" style="font-size: 15px"><b id="configLocalStorage">Almacenamiento local</b>
                                         <small> - <l id="configLocalStorageText">Sus pestañas y sessiones se guardarán de forma local. Solo se sincronizará entre ordenadores su configuración. </l></small>
                                     </span>
                                 </label>
-
-
-                                <label class="" for="optionIngonitoMatters">
-                                        <input type="checkbox" id="optionIngonitoMatters" class="" name="options" value="1">
-                                        <span class="" style="font-size: 15px"><b id="ingonitoMatters">Respetar el incognito</b>
-                                        <small> - <l id="ingonitoMattersText">Las sessiones que guardes en ingonito no se guardaran en el historial.</l></small>
-                                    </span>
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-                <br>
-            </ul>
-        </div>
-
-        <!--IDIOMA-->
-        <div class="jumbotron text-left invisible">
-            <h2 id="configTitol-Language" style="margin-top: -15px"> Idioma</h2>
-            <h4>
-                <small id="configSubtitol-Language" class="text-info">Elija el idioma que quieras</small>
-            </h4>
-            <ul class="nav nav-stacked">
-                <li>
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-sm-12">
-                                🔜🌍
                             </div>
                         </div>
                     </div>
@@ -184,15 +169,53 @@
 
     </section>
 
-    <div id="demo-toast-example" class="mdl-js-snackbar mdl-snackbar" style="width: 50%; margin: 0 auto;">
-        <button class="mdl-snackbar__action" type="button"></button>
-        <b>
-            <div class="mdl-snackbar__text"></div>
-        </b>
-        <button class="mdl-snackbar__action" type="button"></button>
-    </div>
-
 </main>
+
+
+<!-- Modal -->
+<div class="modal fade" id="allowIncognitoModeModal" tabindex="-1" role="dialog" aria-labelledby="allowIncognitoModeModal" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">Activar para modo incognito:</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>
+                    Simple Tab Saver ahora mismo no esta habilitado para modo incognito.
+
+                    <br>Para usar Simple Tab Saver en modo incognito y, para evitar guarde sus sessiones de incognito, se
+                    necesita aprovar el permiso.
+
+                <div class="row justify-content-md-center">
+                    <div class="col-md-auto">
+                        <img src="Images/demostration-of-allow-in-incognito.png" height="440" width="440"/>
+                    </div>
+                </div>
+
+                <br>Un vez activado, uelva a la configuración para deshabitar que las sessiones en incognito se guarden en el historial.
+                <br>Puede posponer este paso si no le interesa usar la extensión en modo incognito.
+                <br><br>Recordatorio: Your private data will always be used locally.
+                </p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Later</button>
+                <button id="doit" type="button" class="btn btn-dark"> Let's do it</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="demo-toast-example" class="mdl-js-snackbar mdl-snackbar" style="width: 50%; margin: 0 auto;">
+    <button class="mdl-snackbar__action" type="button"></button>
+    <b>
+        <div class="mdl-snackbar__text"></div>
+    </b>
+    <button class="mdl-snackbar__action" type="button"></button>
+</div>
+
 
 </body>
 
