--- a/App/Shortcuts/shortcuts.html
+++ b/App/Shortcuts/shortcuts.html
@@ -1,4 +1,4 @@
-<!--Copyright (C) 2016-2020, Roger Pedrós Villorbina, All rights reserved.-->
+<!--Copyright (c) 2016 - 2021. Roger Pedrós Villorbina, All rights reserved.-->
 
 <!DOCTYPE html>
 <html>
@@ -10,13 +10,10 @@
 
     <!--MDL-->
     <link rel="stylesheet" href="../../Resources/Style/Material/material.min.css">
-    <script src="../../Resources/Style/Material/material.min.js"></script>
     <link rel="stylesheet" href="../../Resources/Style/Fonts/Material_Icons.css">
-    <link rel="stylesheet" href="../../Resources/Style/Material/material.blue_grey-red.min.css">
 
     <!--JQUERY-->
     <script src="../../Resources/js/jquery-3.4.1.min.js"></script>
-    <script src="../../Resources/js/tether.min.js"></script>
 
     <!--BOOTSTRAP-->
     <link href="../../Resources/Style/Bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -32,11 +29,11 @@
     <script src="../../Resources/js/global-shortcuts.js"></script>
 
     <!--Custom Scripts-->
+    <script src="../../Background/Provider/Provider.js"></script>
     <script src="../../Resources/js/global-translation.js"></script>
     <script src="translation.js"></script>
+    <script src="shortcuts.js"></script>
 
-    <!--Lodash-->
-    <script src="../../Resources/js/lodash.min.js"></script>
 
     <!--Google Analytics-->
     <script src="../../Resources/js/analytics.js" async></script>
@@ -46,96 +43,91 @@
 
 <body>
 
-<div class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container">
-        <a class="navbar-brand" href="../Settings/settings.html">Simple Tab Saver</a>
+<nav class="navbar navbar-expand navbar-default bg-light navbar-fixed-top justify-content-center border-bottom navbar-custom border-light">
+    <a class="navbar-brand" href="../Settings/settings.html">Simple Tab Saver</a>
+</nav>
+
+<div class="container mt-6">
+    <div class="row">
+        <div class="col-sm-3 col-md-2 col-lg-2 text-left " id="left-content">
+            <ul class="nav nav-pills flex-column nav-stacked">
+                <li class="nav-item">
+                    <a class="nav-link" id="menuHistorial" href="../History/history.html">Historial</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="menuConfig" href="../Settings/settings.html">Configuración</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" id="menuAtajos" href="../Shortcuts/shortcuts.html">Atajos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="menuDonate" href="../More/more.html">Más</a>
+                </li>
+            </ul>
+
+        </div>
+
+        <div class="col-sm-9 col-md-10 col-lg-10" id="right-content">
+            <!--Atajos de teclado-->
+            <div class="jumbotron text-left">
+                <h2 id="atajosTitol" style="margin-top: -15px"> Atajos de teclado</h2>
+                <h4>
+                    <small id="atajosSubtitol" class="text-info"> Utiliza los atajos de teclado para ser más rápido
+                        trabajando.
+                    </small>
+                </h4>
+
+                <ul class="nav flex-column nav-stacked">
+                    <li>
+                        <label>
+                            <span class="" style="font-size: 15px"><b id="atajosEntrada1">Externos</b><l>:</l></span>
+                        </label>
+                    </li>
+                    <li>
+                        <label style="margin-left: 23px" class="">
+                            <span>
+                                <l id="atajosSubentrada1_1">Activar guardado</l> <l>:</l>
+                                <span class="label label-info">Ctrl / ⌘  + U </span>
+                                <button class="btn" id="doit" title="Edit">
+                                    <i class="material-icons" style="font-size:    150%;">create</i>
+                                </button>
+                            </span>
+                        </label>
+                    </li>
+                    <li>
+                        <label class="">
+                            <span class="" style="font-size: 15px"><b id="atajosEntrada2">Internos</b><l>:</l></span>
+                        </label>
+                    </li>
+                    <li>
+                        <label style="margin-left: 23px" class=""><span> <l id="atajosSubentrada2_0">Historial</l><l>:</l> <span
+                                class="label label-info">H</span> </span>
+                        </label>
+                    </li>
+                    <li>
+                        <label style="margin-left: 23px" class=""><span> <l id="atajosSubentrada2_1">Configuración</l><l>:</l> <span
+                                class="label label-info">S</span> </span>
+                        </label>
+                    </li>
+                    <li>
+                        <label style="margin-left: 23px" class=""><span><l id="atajosSubentrada2_2">Atajos</l><l>:</l> <span
+                                class="label label-info">A</span> </span>
+                        </label>
+                    </li>
+                    <li>
+                        <label style="margin-left: 23px" class=""><span><l id="atajosSubentrada2_3">Paypal</l><l>:</l> <span
+                                class="label label-info">P</span> </span>
+                        </label>
+
+                    </li>
+
+                    <br>
+                </ul>
+            </div>
+        </div>
+
     </div>
 </div>
-
-<main class="container">
-
-    <section class="col-sm-3 col-md-2 col-lg-2 text-left " id="left-content">
-        <ul class="nav nav-pills flex-column">
-            <li class="nav-item"><a id="menuHistorial" href="../History/history.html">Historial</a></li>
-            <li class="nav-item"><a id="menuConfig" href="../Settings/settings.html">Configuración</a></li>
-            <li class="nav-item active"><a  id="menuAtajos" href="../Shortcuts/shortcuts.html">Atajos</a></li>
-            <li class="nav-item"><a id="menuDonate" href="../More/more.html">Más</a></li>
-        </ul>
-    </section>
-
-    <section class="col-sm-9 col-md-10 col-lg-10" id="right-content">
-        <!--Atajos de teclado-->
-        <div class="jumbotron text-left">
-            <h2 id="atajosTitol" style="margin-top: -15px"> Atajos de teclado</h2>
-            <h4>
-                <small id="atajosSubtitol" class="text-info"> Utiliza los atajos de teclado para ser más rápido trabajando.</small>
-            </h4>
-
-            <ul class="nav nav-stacked">
-                <li>
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <label>
-                                    <span class="" style="font-size: 15px"><b id="atajosEntrada1">Externos</b><l>:</l></span>
-                                </label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <label style="margin-left: 23px" class="">
-                                    <span> <l id="atajosSubentrada1_1">Activar guardado</l><l>:</l> <span class="label label-info">Ctrl + U</span> </span>
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <label class="">
-                                    <span class="" style="font-size: 15px"><b id="atajosEntrada2">Internos</b><l>:</l></span>
-                                </label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <label style="margin-left: 23px" class="">
-                                    <span> <l id="atajosSubentrada2_0">Historial</l><l>:</l> <span class="label label-info">H</span> </span>
-                                </label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <label style="margin-left: 23px" class="">
-                                    <span> <l id="atajosSubentrada2_1">Configuración</l><l>:</l> <span class="label label-info">S</span> </span>
-                                </label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <label style="margin-left: 23px" class="">
-                                    <span><l id="atajosSubentrada2_2">Atajos</l><l>:</l> <span class="label label-info">A</span> </span>
-                                </label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <label style="margin-left: 23px" class="">
-                                    <span><l id="atajosSubentrada2_3">Paypal</l><l>:</l> <span class="label label-info">P</span> </span>
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-
-                <br>
-            </ul>
-        </div>
-    </section>
-
-</main>
 
 </body>
 
